src/test/ui/duplicate/dupe-symbols-6.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-6.rs:8:1
   |
LL | static HELLO_TWICE: u16 = 0;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

